--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -32,8 +32,8 @@
               <h3 class="font-bold"><%= cast_member[:actor].name %></h3>
               <p class="text-sm text-gray-700">as <%= cast_member[:character] %></p>
               <% if cast_member[:age] %>
-                <p class="mt-2 bg-blue-100 text-blue-800 px-2 py-1 rounded text-sm inline-block">
-                  Age during filming: <%= cast_member[:age] %>
+                <p class="mt-2 bg-blue-100 text-blue-800 px-2 py-1 rounded-full text-sm inline-block">
+                 <%= cast_member[:age] %>
                 </p>
               <% else %>
                 <p class="mt-2 bg-gray-100 text-gray-600 px-2 py-1 rounded text-sm inline-block">
