--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -30,7 +30,7 @@
               <%= movie.title %>
             </h2>
             <div class="flex justify-between items-center">
-              <p class="text-sm text-gray-600"><%= movie.release_date&.split('-')&.first || 'Unknown' %></p>
+            <p class="text-sm text-gray-600"><%= movie.release_date&.year || 'Unknown' %></p>              
               <div class="flex items-center text-sm">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-500 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
