--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -10,12 +10,12 @@
   </div>
 
   <!-- Movie Details -->
-  <div class="bg-white rounded-lg shadow-lg overflow-hidden mb-8">
+  <div class="bg-white rounded-lg overflow-hidden mb-8">
     <div class="md:flex">
       <!-- Movie Poster -->
       <div class="md:w-1/3 lg:w-1/4">
         <% if @movie.poster_path.present? %>
-          <img src="https://image.tmdb.org/t/p/w500<%= @movie.poster_path %>" alt="<%= @movie.title %>" class="w-full h-auto object-cover" />
+          <img src="https://image.tmdb.org/t/p/w500<%= @movie.poster_path %>" alt="<%= @movie.title %>" class="w-full h-auto object-cover shadow-lg rounded-xl" />
         <% else %>
           <div class="w-full h-72 md:h-full bg-gray-200 flex items-center justify-center">
             <span class="text-gray-500">No Poster Available</span>
@@ -49,7 +49,7 @@
           <h3 class="text-lg font-medium text-gray-800 mb-2">Details</h3>
           <div class="grid grid-cols-2 gap-4">
             <div>
-              <p class="text-gray-600 font-medium">Runtime:</p>
+              <p class="text-gray-900 font-medium">Runtime:</p>
               <p class="text-gray-800">
                 <% if runtime = @movie_details&.dig('runtime') %>
                   <%= "#{runtime / 60}h #{runtime % 60}m" %>
