--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= favicon_link_tag 'favicon.ico' %>
   </head>
 
   <body class="bg-gray-50 min-h-screen">
@@ -35,20 +36,5 @@
       <%= yield %>
     </main>
 
-    <footer class="bg-gray-800 text-white py-6 mt-12">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="flex flex-col md:flex-row justify-between items-center">
-          <div class="mb-4 md:mb-0">
-            <p>&copy; <%= Date.today.year %> MovieDB - Powered by TMDB</p>
-          </div>
-          <div class="flex space-x-4">
-            <a href="#" class="text-gray-300 hover:text-white">About</a>
-            <a href="#" class="text-gray-300 hover:text-white">Contact</a>
-            <a href="#" class="text-gray-300 hover:text-white">Privacy</a>
-            <a href="#" class="text-gray-300 hover:text-white">Terms</a>
-          </div>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
