--- a/app/views/actors/_actor.html.erb
+++ b/app/views/actors/_actor.html.erb
@@ -10,9 +10,10 @@
           <img src="https://image.tmdb.org/t/p/w300<%= profile_path %>" alt="<%= role.actor.name %>" style="height: 90px; width: 90px;" class="rounded-full object-cover border-2 border-gray-200" />
         </div>
       <% else %>
-        <div class="w-16 h-16 rounded-full bg-gray-200 flex items-center justify-center flex-shrink-0 border-2 border-gray-200">
-          <span class="text-gray-500 text-xs">No Image</span>
-        </div>
+       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-10 w-10">
+  <path fill-rule="evenodd" d="M7.5 6a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM3.751 20.105a8.25 8.25 0 0 1 16.498 0 .75.75 0 0 1-.437.695A18.683 18.683 0 0 1 12 22.5c-2.786 0-5.433-.608-7.812-1.7a.75.75 0 0 1-.437-.695Z" clip-rule="evenodd" />
+</svg>
+
       <% end %>
     <% rescue %>
       <div class="w-16 h-16 rounded-full bg-gray-200 flex items-center justify-center flex-shrink-0 border-2 border-gray-200">
