add movie availability

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,10 +16,9 @@
         <!-- Navigation Links -->
         <div class="hidden md:block ml-10">
           <div class="flex items-baseline space-x-4">
-            <%= link_to "Home", root_path, class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
-            <%= link_to "Search", search_path, class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
             <%= link_to "Watchlist", "/watchlist", class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
             <%= link_to "Actors", "/actors", class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
+            <%= link_to "Pitch", "/pitch", class: "text-gray-900 hover:bg-indigo-500 px-3 py-2 rounded-md text-sm font-medium" %>
           </div>
         </div>
       </div>
