--- a/app/views/movies/_availability.html.erb
+++ b/app/views/movies/_availability.html.erb
@@ -5,7 +5,7 @@
     "Amazon Prime Video" => "prime.png"
   } %>
 
-  <div class="mt-6 flex justify-end gap-6">
+  <div class="mt-6 max-w-xl flex justify-end gap-6">
 
 
     <% major_platforms.each do |platform, image| %>
