add availabilty to pitch

--- a/app/views/movies/pitch.html.erb
+++ b/app/views/movies/pitch.html.erb
@@ -74,8 +74,8 @@
           <% end %>
         </div>
 
-
-       
+           <%= render "availability", watch_providers: @watch_providers %>
+    
         </div>
       </div>
     </div>
