--- a/app/views/movies/_availability.html.erb
+++ b/app/views/movies/_availability.html.erb
@@ -5,14 +5,14 @@
     "Amazon Prime Video" => "prime.png"
   } %>
 
-  <div class="mt-6 max-w-xl flex justify-end gap-6">
+  <div class="mt-6 flex justify-end gap-6">
 
 
     <% major_platforms.each do |platform, image| %>
       <% countries = @watch_providers.select { |_region, providers| providers.include?(platform) }.keys %>
 
       <% if countries.any? %>
-        <details class="group ml-auto">
+        <details class="group">
           <summary class="flex justify-end cursor-pointer list-none">
             <img
               src="<%= asset_path(image) %>"
@@ -23,9 +23,8 @@
 
           <div class="mt-3 flex flex-wrap justify-end gap-2 text-sm text-gray-600">
             <% countries.each do |code| %>
-              <span class="rounded bg-gray-100 px-2 py-1">
+              <span class="rounded px-2 py-1">
                 <%= image_tag("flags/#{code.downcase}.svg", alt: code, class: "inline-block h-4 w-auto") %>
-
               </span>
             <% end %>
           </div>
