--- a/app/views/movies/watchlist.html.erb
+++ b/app/views/movies/watchlist.html.erb
@@ -50,3 +50,11 @@
   </tbody>
 </table>
 </div>
+
+
+  <div class="flex justify-center">
+    <%= link_to "Pitch me a movie",
+        "/pitch",
+        class: "inline-flex items-center rounded-full bg-indigo-600 px-6 py-3 text-sm font-semibold text-white hover:bg-gray-800 transition",
+        data: { turbo: false } %>
+  </div>
