--- a/app/views/movies/pitch.html.erb
+++ b/app/views/movies/pitch.html.erb
@@ -81,4 +81,11 @@
     </div>
   </div>
 
+  <div class="mb-8 flex justify-center">
+  <%= link_to "Pitch me another one",
+      "/pitch",
+      class: "inline-flex items-center rounded-full bg-indigo-600 px-6 py-3 text-sm font-semibold text-white hover:bg-gray-800 transition",
+      data: { turbo: false } %>
+</div>
+
 </div>
