--- a/app/views/movies/actor_pitch.html.erb
+++ b/app/views/movies/actor_pitch.html.erb
@@ -1,10 +1,15 @@
 <div class="max-w-4xl mx-auto p-6">
 
 
-
+  <div class="flex justify-end mb-4">
+    <%= render "movie_actions", movie: @movie %>
+  </div>
 
   <!-- Movie Details -->
   <div class="bg-white rounded-lg overflow-hidden mb-8">
+
+
+
 
     <div class="md:flex">
       <!-- Movie Poster -->
