--- a/app/views/movies/watchlist.html.erb
+++ b/app/views/movies/watchlist.html.erb
@@ -1,6 +1,15 @@
 <h1 class="text-3xl font-bold mb-8 text-gray-800 text-center">Watchlist</h1>
 
 <div class="max-w-3xl mx-auto px-6 mt-12">
+
+
+  <div class="flex justify-end pb-16">
+    <%= link_to "Pitch me a movie",
+        "/pitch",
+        class: "inline-flex items-center rounded-full bg-indigo-600 px-6 py-3 text-sm font-semibold text-white hover:bg-gray-800 transition",
+        data: { turbo: false } %>
+  </div>
+
 <table class="w-full border-collapse text-left">
   <thead>
     <tr class="text-sm text-gray-600">
@@ -51,10 +60,3 @@
 </table>
 </div>
 
-
-  <div class="flex justify-center">
-    <%= link_to "Pitch me a movie",
-        "/pitch",
-        class: "inline-flex items-center rounded-full bg-indigo-600 px-6 py-3 text-sm font-semibold text-white hover:bg-gray-800 transition",
-        data: { turbo: false } %>
-  </div>
